# minivm

./: .gitignore  Cargo.toml  README.md  minivm.toml.example
guest/: init
llmdoc/: index.md
llmdoc/architecture/: module-map.md  runtime-flow.md
llmdoc/guides/: run-on-linux.md
llmdoc/overview/: project-overview.md
llmdoc/reference/: cli.md
scripts/: linux_cleanup_bridge.sh  linux_setup_bridge.sh  run-linux-demo.sh
src/: backend.rs  cli.rs  config.rs  counter_api.rs  doctor.rs  guest.rs  kvm.rs  launcher.rs  main.rs  net.rs  qemu.rs  wizard.rs
